tests/snapshots/codegen_programs__array_index.snap
---
source: tests/codegen_programs.rs
expression: "int answer(void) { int a[3]; a[1] = 5; return a[1]; }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-64]!
	mov x29, sp
	add x0, x29, #16
	str x0, [x29, #40]
	movz w0, #1
	sxtw x1, w0
	ldr x0, [x29, #40]
	movz x2, #4
	madd x0, x1, x2, x0
	str x0, [x29, #32]
	movz w0, #5
	ldr x2, [x29, #32]
	str w0, [x2]
	add x0, x29, #16
	str x0, [x29, #32]
	movz w0, #1
	sxtw x1, w0
	ldr x0, [x29, #32]
	movz x2, #4
	madd x0, x1, x2, x0
	ldr w0, [x0]
	b Lanswer_return_0
Lanswer_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #64
	ret
.subsections_via_symbols
