tests/snapshots/codegen_programs__call_two_arguments.snap
---
source: tests/codegen_programs.rs
expression: "int f(int a, int b) { return a - b; }\nint answer(void) { return f(10, 3); }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_f
	.p2align	2
_f:
	stp x29, x30, [sp, #-48]!
	mov x29, sp
	str w0, [x29, #16]
	str w1, [x29, #20]
	add x0, x29, #16
	ldr w0, [x0]
	str w0, [x29, #24]
	add x0, x29, #20
	ldr w0, [x0]
	mov w1, w0
	ldr w0, [x29, #24]
	sub w0, w0, w1
	b Lf_return_0
Lf_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #48
	ret
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-48]!
	mov x29, sp
	movz w0, #10
	str x0, [x29, #32]
	movz w0, #3
	str x0, [x29, #40]
	ldr x0, [x29, #32]
	ldr x1, [x29, #40]
	bl _f
	b Lanswer_return_1
Lanswer_return_1:
	mov sp, x29
	ldp x29, x30, [sp], #48
	ret
.subsections_via_symbols
